== Sat Jan 23 05:32:53 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>

* Version bump to 2.0.3
* Made body.sort_parts! recursive, to do the entire body
* Added ability to use << on the results returned by the various address fields, ie, mail.to << 'new@address' now works
* Message now adds multipart/mixed as the content type if nothing is set and there are parts to the message
* Added #display_names and #addrs to all address fields.  #addrs returns the actual Mail::Address object for each address in the field.
* Body should call to_s on given input... incase someone gave it an IO.readlines result (Array)
* 

== Thu Jan 21 05:27:17 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>

* Version bump to 2.0.2
* Major change to attachments, add_file now only accepts
  {:filename => 'full/path/to/file.png'} or 
  {:filename => 'file.png', :content => 'string of file content'}
  you can also now do mail.attachments['filename.png'] = File.read('path/to/file.png')
  which is nice too!

== Fri Jan 15 09:20:51 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>

* Rewrote all network classes to not use singletons.  Means different Mail::Message objects can have different delivery methods.
* Added examples for how to send via GMail, MobileMe, Sendmail, File etc.
* Version bump to 2.0.0 as Network API changed drastically, now not a singleton class.
* Fixed that return-path should only return one address

== Thu Jan 14 10:41:22 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>

* Version update to 1.6.0 - API change on mail.address_fields to always return arrays
* Updated all message.address_field methods to always return arrays, so mail.from #=> ['one@address.com'] now, is least surprise
* Updated handling of empty group lists so it didn't crash

== Thu Jan 12 10:41:47 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>

* Version 1.5.3, handling invalid input on fields.  Highly recommended update