@@ -137,7 +137,7 @@ module Mail
   # And your email object will be created and sent.
   def Mail.deliver(*args, &block)
     mail = Mail.new(args, &block)
-    delivery_method.deliver!(mail)
+    mail.deliver
     mail
   end
 
@@ -173,6 +173,20 @@ module Mail
   # Provides a store of all the emails sent
   def Mail.deliveries
     @@deliveries ||= []
+  end
+
+  # Allows you to over write the default deliveries store from an array to some
+  # other object.  If you just want to clear the store, call Mail.deliveries.clear.
+  # 
+  # If you place another object here, please make sure it responds to:
+  # 
+  # * << (message)
+  # * clear
+  # * length
+  # * size
+  # * and other common Array methods
+  def Mail.deliveries=(val)
+    @@deliveries = val
   end
   
   protected
